Hopefully fix layout overflow

--- a/styles.css
+++ b/styles.css
@@ -57,6 +57,7 @@ body {
     margin: 0px;
     color: white;
     border: 2px ins black;
+    width: max-content;
     /* background-color: rgba(255, 255, 255, 0.1); */
 }
 
@@ -106,10 +107,9 @@ body {
 }
 
 footer {
-    margin: auto;
+    /* margin: auto; */
     width: 100vw;
     text-align: center;
-    /* padding: 16px; */
     padding: 20px 0px;
     font-size: 20px;
     color: gray;
